--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "qoncrete-sdk-node",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "qoncrete nodejs sdk",
   "main": "index.js",
-  "author": "michael@goyoo.com",
+  "author": "support@qoncrete.com",
   "license": "MIT",
   "dependencies": {
     "unirest": "^0.5.1"
